# rucio

./: '  .flake8  .gitignore  .gitreview  .importlinter  .pep8  .pre-commit-config.yaml  .pycodestyle  .travis.yml  AGENTS.md  AUTHORS  AUTHORS.rst  CONTRIBUTING.rst  ChangeLog  ISSUE_TEMPLATE.md  LICENSE  MANIFEST.client.in  MANIFEST.in  MANIFEST.in.client  MANIFEST.in.rucio  MANIFEST.in.webui  MANIFEST.server.in  MANIFEST.webui.in  PULL_REQUEST_TEMPLATE.md  README.client.rst  README.md  README.rst  README.rucio.rst  README.webui.rst  README_LOCAL_TESTS.md  TODO  codecov.yml  commitlint.config.js  conftest.py  package.json  patch.patch  pylintrc  pyproject.client.toml  pyproject.server.toml  pyproject.toml  (+21 more)
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
doc/: Makefile  gfal2.md  make.bat  rucio-server.md
etc/: CERN-bundle.pem  IAM_OIDC_client_secret.json  SCIM_secret.json  alembic.ini.offline.template  alembic.ini.template  alembic_offline.ini.template  automatix.json  data12_8TeV_distribution.txt  emulation.cfg  emulation.cfg.template  gacl  globus-config.yml  globus-config.yml.template  idpsecrets.json  jdoe.cfg  ldap.cfg.template  mc12_8TeV_distribution.txt  netmodel.json  panda.cfg  panda_new.cfg  pip-requires  pip-requires-client  pip-requires-test  rclone-init.cfg  rse-accounts.cfg.template  rse.repository  rucio.cfg  (+8 more)
rucio-api/: pyproject.toml  requirements.txt
rucio-api/src/rucio/api/: main.py  metrics.py  ping.py  utils.py
rucio-api/src/rucio/api/flaskapi/: authenticated_bp.py
rucio-api/src/rucio/api/flaskapi/v1/: accountlimits.py  accounts.py  archives.py  auth.py  common.py  config.py  credentials.py  dids.py  dirac.py  export.py  heartbeats.py  identities.py  import.py  lifetime_exceptions.py  locks.py  main.py  meta_conventions.py  metrics.py  nongrid_traces.py  ping.py  redirect.py  replicas.py  requests.py  rses.py  rules.py  scopes.py  subscriptions.py  traces.py  vos.py
rucio-api/src/rucio/api/flaskapi/v1/templates/: auth_crash.html
rucio-api/src/rucio_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
rucio-core/: old-requirements.txt  pyproject.toml  requirements.txt
rucio-core/src/rucio/core/: account.py  account_counter.py  account_limit.py  authentication.py  config.py  credential.py  did.py  dirac.py  distance.py  exporter.py  heartbeat.py  identity.py  importer.py  lifetime_exception.py  lock.py  message.py  meta_conventions.py  monitor.py  naming_convention.py  nongrid_trace.py  oidc.py  quarantined_replica.py  replica.py  replica_sorter.py  request.py  rse.py  rse_counter.py  rse_expression_parser.py  rse_selector.py  rule.py  rule_grouping.py  scope.py  subscription.py  topology.py  trace.py  transfer.py  version.py  vo.py  volatile_replica.py
rucio-core/src/rucio/core/common/: bittorrent.py  cache.py  checksum.py  client.py  config.py  constants.py  didtype.py  exception.py  logging.py  plugins.py  policy.py  test_rucio_server.py  types.py  utils.py
rucio-core/src/rucio/core/common/dumper/: __init__.py  consistency.py  data_models.py
rucio-core/src/rucio/core/common/schema/: __init__.py  generic.py  generic_multi_vo.py
rucio-core/src/rucio/core/db/sqla/: __init__.py  constants.py  models.py  sautils.py  session.py  types.py  util.py
rucio-core/src/rucio/core/db/sqla/migrate_repo/: script.py.mako
rucio-core/src/rucio/core/db/sqla/migrate_repo/versions/: 01eaf73ab656_add_new_rule_notification_state_progress.py  0437a40dbfd1_add_eol_at_in_rules.py  0f1adb7a599a_create_transfer_hops_table.py  102efcf145f4_added_stuck_at_column_to_rules.py  13d4f70c66a9_introduce_transfer_limits.py  140fef722e91_cleanup_distances_table.py  1677d4d803c8_split_rse_availability_into_multiple.py  16a0aca82e12_create_index_on_table_replicas_path.py  1803333ac20f_adding_provenance_and_phys_group.py  1a29d6a9504c_add_didtype_chck_to_requests.py  1c45d9730ca6_increase_identity_length.py  1d1215494e95_add_quarantined_replicas_table.py  1d96f484df21_asynchronous_rules_and_rule_approval.py  1fc15ab60d43_add_message_history_table.py  2190e703eb6e_move_rse_settings_to_rse_attributes.py  21d6b9dc9961_add_mismatch_scheme_state_to_requests.py  22d887e4ec0a_create_sources_table.py  277b5fbb41d3_switch_heartbeats_executable.py  2854cd9e168_added_rule_id_column.py  295289b5a800_processed_by_and__at_in_requests.py  2962ece31cf4_add_nbaccesses_column_in_the_did_table.py  2af3291ec4c_added_replicas_history_table.py  2b8e7bcb4783_add_config_table.py  2edee4a83846_add_source_to_requests_and_requests_.py  2eef46be23d4_change_tokens_pk.py  3082b8cef557_add_naming_convention_table_and_closed_.py  3152492b110b_added_staging_area_column.py  32c7d2783f7e_create_bad_replicas_table.py  379a19b5332d_create_rse_limits_table.py  384b96aa0f60_created_rule_history_tables.py  3ad36e2268b0_create_collection_replicas_updates_table.py  3c9df354071b_extend_waiting_request_state.py  3d9813fab443_add_a_new_state_lost_in_badfilesstatus.py  4207be2fd914_add_notification_column_to_rules.py  42db2617c364_create_index_on_requests_external_id.py  436827b13f82_added_column_activity_to_table_requests.py  45378a1e76a8_create_collection_replica_table.py  4783c1f49cb4_create_distance_table.py  49a21b4d4357_create_index_on_table_tokens.py  4bab9edd01fc_create_index_on_requests_rule_id.py  (+42 more)
rucio-core/src/rucio/core/did_meta_plugins/: __init__.py  did_column_meta.py  did_meta_plugin_interface.py  filter_engine.py  json_meta.py  mongo_meta.py  postgres_meta.py
rucio-core/src/rucio/core/permission/: __init__.py  generic.py  generic_multi_vo.py
rucio-core/src/rucio/core/rse/: __init__.py  rsemanager.py  translation.py
rucio-core/src/rucio/core/rse/protocols/: bittorrent.py  cache.py  gfal.py  globus.py  gsiftp.py  mock.py  ngarc.py  posix.py  protocol.py  rclone.py  rfio.py  srm.py  ssh.py  storm.py  webdav.py  xrootd.py
rucio-core/src/rucio_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
rucio-core/tests/common/: test_cache.py  test_checksum.py  test_didtype.py  test_extra.py  test_plugins.py  test_stopwatch.py  test_types.py  test_utils.py
(+2783 files in other folders)
