[build-system]
requires = ["setuptools>=78.1.0", "wheel>=0.45.1", "packaging"]
build-backend = "setuptools.build_meta"

[project]
# TODO: this project should be renamed to distinguish it from the rucio server package (named "rucio"),
# once https://github.com/rucio/rucio/issues/7330 is achieved.
name = "rucio"
description = "Top-level package for the Rucio server, client and other packages"
dynamic = ["version"]

# TODO: these dependencies can be removed from the top-level pyproject.toml
# once https://github.com/rucio/rucio/issues/7330 is achieved.
dependencies = [
  'requests<=2.32.5',
  'urllib3<=1.26.19',
  'dogpile-cache<=1.2.2',
  'packaging<=25.0',
  'tabulate<=0.9.0',
  'jsonschema<=4.25.1',
  'rich<=14.2.0',
  'typing_extensions<=4.15.0',
  'argcomplete<=3.6.3',
  'boto',  # no upper limit is set in .in or .txt req files
  'python-magic<=0.4.27',
  'paramiko<=4.0.0',
  'boto3<=1.40.64',
  'sqlalchemy<=2.0.44',
  'alembic<=1.16.5',
  'pymemcache<=4.0.0',
  'python-dateutil<=2.9.0.post0',
  'stomp-py<=8.2.0',
  'statsd<=4.0.1',
  'geoip2<=5.1.0',
  'google-auth<=2.42.1',
  'redis<=7.0.1',
  'flask<=3.1.2',
  'oic<=1.7.0',
  'prometheus_client<=0.23.1',
]
requires-python = ">=3.9"
authors = [
  {name = "Rucio", email = "rucio-contact@cern.ch"},
]
maintainers = [
  {name = "Rucio", email = "rucio-contact@cern.ch"}
]
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = [
  'Development Status :: 5 - Production/Stable',
  'Intended Audience :: Information Technology',
  'Intended Audience :: System Administrators',
  'Operating System :: POSIX :: Linux',
  'Natural Language :: English',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Environment :: No Input/Output (Daemon)',
]

# TODO: these dependencies can be removed from the top-level pyproject.toml
# once https://github.com/rucio/rucio/issues/7330 is achieved.
[project.optional-dependencies]
oracle = ['oracledb<=3.4.0']
mongo = ['pymongo<=4.15.3']
elastic = ['elasticsearch<=8.15.1']
postgresql = [
            'psycopg<=3.2.12',
            'psycopg-binary<=3.2.12',
            'psycopg-pool<=3.2.12',
        ]
mysql = ['PyMySQL<=1.1.1']
kerberos = [
            'kerberos<=1.3.1',
            'pykerberos<=1.2.4',
            'requests-kerberos<=0.15.0',
        ]
globus = [
            'PyYAML<=6.0.3',
            'globus-sdk<=4.1.0',
        ]
saml = ['python3-saml<=1.16.0']
dev = [
    'pytest',
    'pytest-xdist',
    'pytest-cov',
    'pyflakes',
    'pylint',
    'isort',
    'xmltodict',
    'pytz',
    'pydoc-markdown',
    'docspec_python',
    'sh',
    'PyYAML',
]

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "lib",
]
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore::BytesWarning",
]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",  # Ignore code in TYPE_CHECKING blocks
    "raise NotImplementedError",  # Ignore un-implemented methods
    "@(abc\\.)?abstractmethod",  # Ignore abstract methods (they are not run directly)
    "@overload",  # Ignore typing.overload decorated function (only used for type-checking)
]

[tool.ruff]
line-length = 256
target-version = "py39"

extend-include = [
    "bin/*",
]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",    # All default pycodestyle error families
    "W",    # All default pycodestyle warning families
    "F",    # Default pyflakes rules
    "I",    # isort
    "N",    # pep8-naming
    "S",    # bandit
    "TC",   # flake8-type-checking
    "G",    # flake8-logging-format
    "TCH",  # flake8-type-checking
    "UP",   # pyupgrade
    "TID",  # flake8-tidy-imports
    "PLE",  # pylint
]

extend-select = [
    "D419",    # Empty docstring (suggests bad documentation hygiene.)
    "PLR0124", # Comparison with itself – almost always a bug, but rare.
    "PLR1711", # Useless return - stylistic but can be misleading.
    "PLW0127", # Self-assigning variable
    "PLW3301", # Nested min/max – niche readability case.
]

ignore = [
    "E731", # Do not assign a lambda expression, use a def
    "N818",  # Unnecessary - we have valid suffixes like 'NotFound', 'Denied', 'Mismatch', etc.
    "UP008", # Use `super()` instead of `super(__class__, self)`
    "UP015", # Unnecessary open mode parameters
    "UP028", # Replace `yield` over `for` loop with `yield from`
    "UP030", # Use implicit references for positional format fields
    "UP031", # Use format specifiers instead of percent format
    "UP032", # Use f-string instead of `format` call
    "UP037", # Remove quotes from type annotation. Seeing possible false positives caused by https://github.com/astral-sh/ruff/pull/11485
    "S101",  # Pending https://github.com/rucio/rucio/issues/6680
    "S105",  # Pending https://github.com/rucio/rucio/issues/6696
    "S108",  # Pending https://github.com/rucio/rucio/issues/6655
    "S110",  # Pending https://github.com/rucio/rucio/issues/6657
    "S112",  # Pending https://github.com/rucio/rucio/issues/6657
    "S113",  # Pending https://github.com/rucio/rucio/issues/6654
    "S310",  # Pending https://github.com/astral-sh/ruff/issues/7918
    "S324",  # Pending https://github.com/rucio/rucio/issues/6665
    "S501",  # Pending https://github.com/rucio/rucio/issues/6656
    "S602",  # Pending https://github.com/astral-sh/ruff/issues/4045
    "S603",  # Pending https://github.com/astral-sh/ruff/issues/4045
    "S608",  # Pending https://github.com/rucio/rucio/issues/6669
]

[tool.ruff.lint.isort]
known-first-party = ["rucio"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"typing.AbstractSet".msg = "Use `collections.abc.Set` instead."
"typing.AsyncContextManager".msg = "Use `contextlib.AbstractAsyncContextManager` instead."
"typing.AsyncGenerator".msg = "Use `collections.abc.AsyncGenerator` instead."
"typing.AsyncIterable".msg = "Use `collections.abc.AsyncIterable` instead."
"typing.AsyncIterator".msg = "Use `collections.abc.AsyncIterator` instead."
"typing.Awaitable".msg = "Use `collections.abc.Awaitable` instead."
"typing.Callable".msg = "Use `collections.abc.Callable` instead."
"typing.ChainMap".msg = "Use `collections.ChainMap` instead."
"typing.Collection".msg = "Use `collections.abc.Collection` instead."
"typing.Container".msg = "Use `collections.abc.Container` instead."
"typing.ContextManager".msg = "Use `contextlib.AbstractContextManager` instead."
"typing.Coroutine".msg = "Use `collections.abc.Coroutine` instead."
"typing.Counter".msg = "Use `collections.Counter` instead."
"typing.DefaultDict".msg = "Use `collections.defaultdict` instead."
"typing.Deque".msg = "Use `collections.deque` instead."
"typing.Dict".msg = "Use built-in type `dict` instead. (note: to annotate arguments, the abstract collection type `collections.abc.Mapping` is preferred, if possible. See: https://docs.python.org/3/library/typing.html#typing.Dict)"
"typing.FrozenSet".msg = "Use built-in type `frozenset` instead."
"typing.Generator".msg = "Use `collections.abc.Generator` instead."
"typing.ItemsView".msg = "Use `collections.abc.ItemsView` instead."
"typing.Iterable".msg = "Use `collections.abc.Iterable` instead."
"typing.Iterator".msg = "Use `collections.abc.Iterator` instead."
"typing.KeysView".msg = "Use `collections.abc.KeysView` instead."
"typing.List".msg = "Use built-in type `list` instead. (note: to annotate arguments, abstract collection types such as `collections.abc.Sequence` and `collections.abc.Iterable` are preferred, if possible. See: https://docs.python.org/3/library/typing.html#typing.List)"
"typing.Mapping".msg = "Use `collections.abc.Mapping` instead."
"typing.MappingView".msg = "Use `collections.abc.MappingView` instead."
"typing.Match".msg = "Use `re.Match` instead."
"typing.MutableMapping".msg = "Use `collections.abc.MutableMapping` instead."
"typing.MutableSequence".msg = "Use `collections.abc.MutableSequence` instead."
"typing.MutableSet".msg = "Use `collections.abc.MutableSet` instead."
"typing.OrderedDict".msg = "Use `collections.OrderedDict` instead."
"typing.Pattern".msg = "Use `re.Pattern` instead."
"typing.Reversible".msg = "Use `collections.abc.Reversible` instead."
"typing.Sequence".msg = "Use `collections.abc.Sequence` instead."
"typing.Set".msg = "Use built-in type `set` instead. (note: to annotate arguments, the abstract collection type `collections.abc.AbstractSet` is preferred, if possible. See: https://docs.python.org/3/library/typing.html#typing.Set)"
"typing.Tuple".msg = "Use built-in type `tuple` instead."
"typing.Type".msg = "Use built-in `type` instead."
"typing.ValuesView".msg = "Use `collections.abc.ValuesView` instead."

[tool.ruff.lint.pep8-naming]
extend-ignore-names = [
    "do_GET" # http.server method name
]

[tool.ruff.lint.per-file-ignores]
'tests/*.py' = [
    'S101', # Usage of assert
    'S105', # Hardcoded password string
    'S106', # Hardcoded password function argument
    'S108', # Hardcoded temporary file
    'S110', # try-except-pass
    'S113', # Probable use of requests call without timeout
    'S306', # Use of insecure and deprecated function
    'S311', # Non-cryptographic random usage
    'S324', # Probable use of insecure hash function
    'S605', # Starting a process with a shell
    'D419', # Docstring is empty
]

'lib/rucio/web/rest/flaskapi/v1/import.py' = [
    'N999', # Invalid module name: clashes with import
]

'lib/rucio/db/sqla/models.py' = [
    'N805'  # First argument of a method should be named `self`
]

'lib/rucio/db/sqla/migrate_repo/versions/*.py' = [
    'S608'  # Hardcoded SQL expression
]

[tool.ruff.lint.flake8-type-checking]
# Add quotes around type annotations, if doing so would allow
# an import to be moved into a type-checking block.
quote-annotations = true

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "lib"

[tool.setuptools.packages.find]
where = ["lib"]
include = ["rucio*"]

[tool.setuptools.dynamic]
version = {attr = "rucio.vcsversion.VERSION"}  # any module attribute compatible with ast.literal_eval
