# Copyright European Organization for Nuclear Research (CERN)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# You may not use this file except in compliance with the License.
# You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
[global]
verbose         = 1
force-manifest  = 1

[metadata]
description-file =
    README.rst


[build_sphinx]
all_files  = 1
build-dir  = doc/build
source-dir = doc/source

[upload_sphinx]
upload-dir = doc/build/html

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[pep8]
max-line-length=256

[flake8]
max-line-length=256

[bdist_rpm]
requires = argparse == 1.2.1
           distribute == 0.6.48
           argcomplete == 0.6.3
           kerberos == 1.1.1
           requests == 2.0.1
           requests-kerberos == 0.4
           urllib3 == 1.6
           wsgiref == 0.1.2
           dogpile.cache == 0.5.0
           dogpile.core == 0.4.1

#[install]
#install_data    = /opt/rucio
#install_purelib = /opt/rucio/lib
