# Copyright European Organization for Nuclear Research (CERN)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# You may not use this file except in compliance with the License.
# You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
[global]
verbose         = 1
force-manifest  = 1

[metadata]
description-file =
    README.rst


[build_sphinx]
all_files  = 1
build-dir  = doc/build
source-dir = doc/source

[upload_sphinx]
upload-dir = doc/build/html

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[pep8]
max-line-length=256

[flake8]
max-line-length=256
